Login + redirection + modif MVC

--- a/Vue/VueLogin.html
+++ b/Vue/VueLogin.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/Index.css">
 </head>
 
 <body>
 <div class="FormCenter">
-    <h1 class="HeaderTitle"> Survey Bobogator </h1>
+    <h1 class="HeaderTitle"> Mise de cheifou </h1>
 
-    <form action="../Controleur/Login.php" method="post">
+    <form action="/TP2-Web/index.php/Login" method="POST">
         <input class="textboxlogin"type="text" name="txtUsername"><br><br>
         <input class="textboxlogin"type="password" name="txtPassword"><br><br>
         <input class="button" type="submit" name="btnConnexion" value="Connexion">
@@ -18,9 +19,6 @@
     </form>
 
 </div>
-
-
-
 </body>
 
 </html>
